# MODELOS-_UD-

./: README.md
dot_ent/: pyvenv.cfg
dot_ent/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
workshop_1/: Arcade.py  README.md  payment.py  purchase.py  pyproject.toml
workshop_1/code/Arcade/: Arcade.py  cli.py  game.py  payment.py  purchase.py
